metadata/force-app/main/default/objects/CustomName_LnCCb__c/CustomName_LnCCb__c.object-meta.xml
<CustomObject>
    <description>Description_fLjKe</description>
    <label>CustomLabel_evXKS</label>
    <nameField>
        <label>CustomLabel_evXKS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_evXKSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>