metadata/force-app/main/default/objects/CustomName_LnCCb__c/fields/CustomField_RHFig__c.field-meta.xml
<CustomField>
    <fullName>CustomField_RHFig__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFJcog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>